<resources>
    <string name="app_name">Currency</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="usd">USD</string>
    <string name="convert">Convert</string>
    <string name="details">Details</string>
    <string name="currency">Currency</string>
    <string name="currency_history">Currency History</string>
</resources>