<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter"
            android:textColor="@color/main_blue"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:text="@string/from" />


                <ImageView
                    android:id="@+id/changeIV"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_change" />

                <TextView
                    android:id="@+id/txtTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:text="@string/to" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spnFirstCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/usd"
                    android:textColor="@android:color/darker_gray" />


                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spnSecondCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/usd"
                    android:textColor="@android:color/darker_gray" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etFirstCurrency"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="50dp"
                android:text="1"
                android:background="@drawable/edit_text_input_with_border"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etSecondCurrency"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_input_with_border"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

        </LinearLayout>


        <Button
            android:id="@+id/detailsBTN"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue_round"
            android:text="@string/details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConvert"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

</ScrollView>